refactor: use checkIns.getFirst() instead of checkIns.get(0)